--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,44 +1,42 @@
 body {
-    padding-top: 50px;
-  }
-  
-  footer {
-    padding: 50px;
-  }
-  
-  .instagram-pic {
-     position: relative;
-     padding: 10px;
-     overflow: hidden;
-  }
-  
-  .instagram-picimg {
-    padding: 5px;
-    border-radius: 2px;
-    box-shadow: 005 pxrgba(0, 0, 0, 0.5);
-    height: 100%;
-    width: 100%;
-  }
-  
-  .instagram-bar {
-    position:absolute;
-    bottom:30px;
-    width:100%;
-    left:0;
-    padding-left:30px;
-    padding-right:30px;
-    color:#FFF;
-  }
-  
-  .instagram-barspan {
-    margin-right:5px;
-  }
-  
-  .instagram-bar.likes {
-     float:left;
-     color: red;
-  }
-  
-  .instagram-bar.comments {
-    float:right;
-  }
+  padding-top:50px;
+}
+
+footer {
+  padding:50px;
+}
+
+.instagram-pic {
+   position: relative;
+   padding:10px;
+   overflow:hidden;
+}
+
+.instagram-picimg {
+  padding:5px;
+  border-radius:2px;
+  box-shadow: 0px 0px 5px rgb(39, 4, 4);
+  height: 50%;
+  width: 100%;
+}
+
+.instagram-bar {
+  margin-right:5px;
+  position:absolute;
+  bottom:30px;
+  width:100%;
+  left:0;
+  padding-left:30px;
+  padding-right:30px;
+  color:#FFF;
+}
+
+.instagram-bar-likes {
+   float:left;
+   color: red;
+}
+
+.instagram-bar-comments {
+  float:right;
+  color: red;
+}
