--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -3,4 +3,4 @@
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-<link rel="stylesheet" href="css/style.css"/>
+<link rel="stylesheet" href="public/css/style.css"/>
